Modified jar & build scripts to include prerelease API version 0.1.3-pre